:bug: Fix too high intro on mobile

--- a/components/intro/styles.module.scss
+++ b/components/intro/styles.module.scss
@@ -5,4 +5,8 @@
 }
 
 .introBox {
+  @include mediaQuery(sm) {
+    width: 70vw;
+    margin: 0 auto;
+  }
 }
